<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appgreen"
    tools:context="com.nadim.almourabi.activities.register">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="@dimen/padding"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:layout_width="@dimen/logo"
                    android:layout_height="@dimen/logo"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/big_margin"
                    android:layout_marginTop="@dimen/margin"
                    android:contentDescription="@string/todo"
                    android:src="@mipmap/ic_launcher" />

                <EditText
                    android:id="@+id/fn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smaller_margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:background="@color/trans"
                    android:hint="@string/fname_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dirtyWhite"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/ln"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smaller_margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:background="@color/trans"
                    android:hint="@string/lname_hint"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dirtyWhite"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smaller_margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:background="@color/trans"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:padding="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dirtyWhite"
                    android:textSize="@dimen/text_size" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smaller_margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:background="@color/trans"
                    android:hint="@string/pass_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:padding="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dirtyWhite"
                    android:textSize="@dimen/text_size" />

                <Spinner
                    android:id="@+id/level"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smaller_margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:background="@color/trans" />

                <Spinner
                    android:id="@+id/group"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smaller_margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:background="@color/trans" />

                <Button
                    android:id="@+id/register"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/login_register_selector"
                    android:text="REGISTER"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/dirtyWhite"
                    android:layout_marginEnd="@dimen/margin_plus"
                    android:layout_marginLeft="@dimen/margin_plus"
                    android:layout_marginRight="@dimen/margin_plus"
                    android:layout_marginStart="@dimen/margin_plus"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/go_to_signin"
                    android:textColor="@color/white" />

            </LinearLayout>

        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>
