<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appgreen"
    tools:context="com.nadim.almourabi.activities.login">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:orientation="vertical"
                android:padding="@dimen/padding"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <ImageView
                    android:layout_width="@dimen/logo"
                    android:layout_height="@dimen/logo"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/big_margin"
                    android:layout_marginTop="@dimen/margin"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/final_logo" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smaller_margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:background="@color/trans"
                    android:drawableLeft="@drawable/person"
                    android:drawableStart="@drawable/person"
                    android:hint="@string/email_hint"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:paddingEnd="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dirtyWhite"
                    android:textSize="@dimen/text_size" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/smaller_margin"
                    android:layout_marginEnd="@dimen/margin"
                    android:layout_marginLeft="@dimen/margin"
                    android:layout_marginRight="@dimen/margin"
                    android:layout_marginStart="@dimen/margin"
                    android:background="@color/trans"
                    android:drawableLeft="@drawable/lock"
                    android:drawableStart="@drawable/lock"
                    android:hint="@string/pass_hint"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingEnd="@dimen/padding"
                    android:paddingRight="@dimen/padding"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/dirtyWhite"
                    android:textSize="@dimen/text_size" />

                <Button
                    android:id="@+id/login"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/login_register_selector"
                    android:text="LOGIN"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textColor="@color/dirtyWhite"
                    android:layout_marginEnd="@dimen/margin_plus"
                    android:layout_marginLeft="@dimen/margin_plus"
                    android:layout_marginRight="@dimen/margin_plus"
                    android:layout_marginStart="@dimen/margin_plus"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/sign_up_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:text="@string/go_to_signup"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/twitter"
                        android:layout_width="@dimen/assets_btn"
                        android:layout_height="@dimen/assets_btn"
                        android:contentDescription="TODO"
                        app:srcCompat="@drawable/twitter" />

                    <ImageView
                        android:id="@+id/facebook"
                        android:layout_width="@dimen/assets_btn"
                        android:layout_height="@dimen/assets_btn"
                        android:layout_marginLeft="@dimen/small_margin"
                        android:contentDescription="TODO"
                        app:srcCompat="@drawable/facebook" />
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </android.support.design.widget.CoordinatorLayout>

</android.support.constraint.ConstraintLayout>
